# qc_level_1

./: .env.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md  docker-compose.yml
.claude/rules/: qc-level1.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
base/: CLAUDE.md
base/.claude/: settings.json
deploy/: docker-compose.prod.yml  install.sh  trust-ca.sh  update.sh
docs/: deploiement.md
server/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
server/app/: __init__.py  config.py  db.py  deps.py  main.py  security.py  seed.py
server/app/models/: __init__.py  alerte.py  base.py  client.py  enums.py  produit.py  push.py  suivi.py  symptome.py  utilisateur.py
server/app/routers/: alertes.py  auth.py  clients.py  events.py  export.py  health.py  kpis.py  produits.py  push.py  suivis.py  symptomes.py  utilisateurs.py
server/app/schemas/: alerte.py  auth.py  client.py  produit.py  push.py  suivi.py  symptome.py  utilisateur.py
server/app/services/: alerte.py  auth.py  client.py  kpi.py  pdf.py  produit.py  push.py  scheduler.py  sse.py  suivi.py  symptome.py  utilisateur.py
server/migrations/: env.py
server/migrations/versions/: 0001_initial.py  0002_operational_tables.py  0003_push_subscription.py
server/tests/: conftest.py  test_alerte.py  test_auth.py  test_export.py  test_health.py  test_kpis.py  test_push.py  test_reference.py  test_suivi.py
web/: .dockerignore  Caddyfile  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: sw.ts  (+4 more)
(+43 files in other folders)
