[project]
name = "qc-level1-server"
version = "0.1.0"
description = "QC Level 1 (PMP) — FastAPI early-warning backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
    "pywebpush>=2.3.0",
    "fpdf2>=2.8.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

# This is a deployable app, not a distributable library — uv manages the
# environment but does not build/install the project itself.
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
